--- a/src/Components/Contact/Popup.css
+++ b/src/Components/Contact/Popup.css
@@ -1,14 +1,19 @@
 .popup-content{
     padding: 0 !important;
     border: 0 !important;
+    width: 20% !important;
+    border-radius: 30px !important;
 }
 
 .modal {
+  border-radius: 30px !important;
     font-size: 14px;
     margin: 0 auto;
     background-color: rgba(161, 35, 192, 0.788); 
   }
   .modal > .header {
+    
+    border-radius: 30px !important;
     width: 98%;
     border-bottom: 1px solid black;
     background-color: rgba(161, 35, 192, 0.788); 
@@ -40,5 +45,6 @@
     background: #ad61b4;
     border-radius: 12px;
     font-size: 16px;
+    padding: 10px;
     border: 2px solid #581558;
 }
